<resources>
    <string name="app_name">Diet\'Ynov</string>
    <string name="title_activity_nav">navActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_cnfigure_account">Configurer le compte</string>
    <string name="size">Taille (cm)</string>
    <string name="birthdate">Date de naissance (jj/mm/aaaa)</string>
    <string name="default_weight">Poids de départ (Kg)</string>
    <string name="sex">Sexe</string>
    <string name="male">Homme</string>
    <string name="female">Femme</string>
    <string name="submit">Valider</string>
    <string name="title_activity_home">Home</string>
    <string name="my_weight">Mon poids</string>
    <string name="my_measurement">Mes mensurations</string>
    <string name="my_recipes">Mes recettes</string>
    <string name="all_recipes">Toutes les recettes</string>
    <string name="home">Accueil</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_my_weight">MyWeight</string>
    <string name="title_activity_my_measurements">MyMeasurements</string>
    <string name="my_measurements_taille">Taille</string>
    <string name="my_measurements_hanche">Hanche</string>
    <string name="my_measurements_cuisse">Cuisse</string>
    <string name="my_measurements_bras">Bras</string>
    <string name="add_measurement">Ajouter une mesure</string>
    <string name="wrong_size_value">La taille doit être comprise entre 20cm et 250cm</string>
    <string name="wrong_weight_value">Le poids doit être comprise entre 20Kg et 700cm</string>
</resources>
