<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Home"
    tools:showIn="@layout/app_bar_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonWeight"
            android:layout_width="310dp"
            android:layout_height="140dp"
            android:layout_marginBottom="10dp"
            android:onClick="goToMyWeightActivity"
            android:paddingLeft="100dp"
            android:paddingTop="50dp"
            android:paddingRight="100dp"
            android:paddingBottom="50dp"
            android:text="@string/my_weight"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonMeasurement"
            android:layout_width="310dp"
            android:layout_height="140dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="goToMyMeasurementActivity"
            android:paddingLeft="100dp"
            android:paddingTop="50dp"
            android:paddingRight="100dp"
            android:paddingBottom="50dp"
            android:text="@string/my_measurement"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonRecipes"
            android:layout_width="310dp"
            android:layout_height="140dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="goToMyRecipes"
            android:paddingLeft="100dp"
            android:paddingTop="50dp"
            android:paddingRight="100dp"
            android:paddingBottom="50dp"
            android:text="@string/my_recipes"
            android:textAlignment="center" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>